<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/parent_layout">

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/plateimage"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/plateno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/plateno"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dateTimeStamp"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plateno"
        android:layout_alignEnd="@+id/plateno"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="-109dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/datetime" />

    <ImageView
        android:id="@+id/deleteHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dateTimeStamp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-30dp"
        android:contentDescription="@string/deletebutton"
        app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

    <TextView
        android:id="@+id/docID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="95dp"
        android:text="TextView"
        android:visibility="gone" />
</RelativeLayout>